feat(compile): add --self-contained for zero-Java distribution
`ktx compile <script> --self-contained -o <dir>` now produces a
directory tree (`bin/`, `lib/app.jar`, `runtime/`) that bundles a
jlink-built minimal JRE alongside the existing fat jar. End users
extract the directory and run `bin/<name>`; no Java install required.

Implementation:
  - new SelfContainedFlow in core: reuses CompileFlow for the fat jar,
    invokes jdeps + jlink off the JDK that ktx itself runs on.
  - jlink uses --compress=2 --strip-debug for a typical ~40MB JRE.
  - launcher script written for the host OS only (sh on Unix, .bat on
    Windows). Cross-platform distribution still requires running the
    build once on each target platform — jlink cannot cross-compile.
  - jdeps is unioned with a small allowlist (jdk.unsupported,
    java.naming, java.logging) since reflective class loads are
    invisible to jdeps.

CompileCommand routes on the new flag; fat-jar mode is unchanged.
docs/guide/compile.md gets a new section walking through the flow,
and reports/phase-3-todo.md marks 3.1 done while leaving jpackage
installer as a follow-up entry.

Smoke-tested with hello.main.kts and the jackson/with-deps script;
both run cleanly under `env -i PATH=/usr/bin:/bin <bin>` (no JAVA_HOME,
no inherited PATH from mise).

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>